ported to Jekyll

--- a/mrover/contact/index.html
+++ b/mrover/contact/index.html
@@ -1,8 +1,44 @@
 ---
-layout: page
+layout: default
 title: Contact
 permalink: /contact/
 weight: 2
 ---
 
-<p>Hello</p>
+<div class="contact-page">
+  <div class="hero"></div>
+
+  <div class="contact-info wrap">
+    <br />
+    <h4>The Team</h4>
+
+    <p><a href="mailto:rover@umich.edu">rover@umich.edu</a></p>
+    <p>University of Michigan</p>
+    <p>Wilson Student Team Project Center</p>
+    <p>2603 Draper, Ann Arbor, MI 48109-2101</p>
+    <br />
+
+    <h4>Executive Board</h4>
+
+    <h6>President</h6>
+    <p>Scott Briggs</p>
+    <p><a href="mailto:sdbriggs@umich.edu">sdbriggs@umich.edu</a></p>
+
+    <h6>Vice President</h6>
+    <p>Nick Wurtz</p>
+    <p><a href="mailto:nwurtz@umich.edu">nwurtz@umich.edu</a></p>
+
+    <h6>Chief Engineer</h6>
+    <p>Joe Yanos</p>
+    <p><a href="mailto:jgyanos@umich.edu">jgyanos@umich.edu</a></p>
+
+    <h6>Treasurer</h6>
+    <p>Sam Rumack</p>
+    <p><a href="mailto:rumacsam@umich.edu">rumacsam@umich.edu</a></p>
+
+    <h6>Information Services Officer</h6>
+    <p>Connor Krupp</p>
+    <p><a href="mailto:kruppcon@umich.edu">kruppcon@umich.edu</a></p>
+
+  </div>
+</div>
