--- a/mrover/index.html
+++ b/mrover/index.html
@@ -56,13 +56,13 @@ layout: default
         </div>
     </div>
 
-    <div class="join-donate-cta wrap">
+    <div class="join-donate-cta">
         <div class="wrap">
             <div class="cta">
                 <h6>Join?</h6>
                 <p>Interested in joining MRover? It couldn't be any easier. Just show up to our Sunday meetings at
                     12:00pm in 107 GFL (behind the FXB) on North Campus! Or you can contact us by clicking below.</p>
-                <a href="umrover.org/contact">
+                <a href="contact">
                     <button class="button-hollow">Contact Us</button>
                 </a>
             </div>
@@ -70,7 +70,7 @@ layout: default
                 <h6>Donate?</h6>
                 <p>Interested in helping us win the University Rover Challenge? Any little bit helps. Of course we would greatly
                     appreciate your support! Just click below and we would love to talk about it.</p>
-                <a href="umrover.org/contact/">
+                <a href="contact">
                     <button class="button-hollow">Contact us</button>
                 </a>
             </div>
