--- a/mrover/about/index.html
+++ b/mrover/about/index.html
@@ -15,7 +15,7 @@ weight: 1
     <div class="wrap">
       <div class="row-content text-content">
 
-        MRover’s main goal is to win the University Rover Challenge (URC). This competition has student teams from all over the world design and build a rover, which could be used on Mars to assist future astronauts. The URC is hosted by The Mars Society which involves teams of university students from around the world all competing for the title. The competition takes place at the Mars Research Station located in the Utah Desert. The terrain serves as a close match to that of the rocky Mars surface. The teams must be able to maneuver their rovers through the unpredictable terrain using only the cameras on their rovers.
+        MRover's main goal is to win the University Rover Challenge (URC). This competition has student teams from all over the world design and build a rover, which could be used on Mars to assist future astronauts. The URC is hosted by The Mars Society which involves teams of university students from around the world all competing for the title. The competition takes place at the Mars Research Station located in the Utah Desert. The terrain serves as a close match to that of the rocky Mars surface. The teams must be able to maneuver their rovers through the unpredictable terrain using only the cameras on their rovers.
 
       </div>
       <div class="row-content"></div>
@@ -30,7 +30,7 @@ weight: 1
         <div class="info-block" style="background-image: url('chassis.jpg');"></div>
         <div class="info-content">
           <h4>Chassis and Suspension</h4>
-          This year’s rover features a carbon fiber chassis and rocker-bogie design, a passive suspension system, which ensures a neutral chassis angle and contact between all six wheels and the ground. A mechanical hard stop has also been implemented to prevent bogie inverse, a common issue with this type of suspension system.
+          This year's rover features a carbon fiber chassis and rocker-bogie design, a passive suspension system, which ensures a neutral chassis angle and contact between all six wheels and the ground. A mechanical hard stop has also been implemented to prevent bogie inverse, a common issue with this type of suspension system.
 
         </div>
       </div>
@@ -66,10 +66,10 @@ weight: 1
   <div class="row-container info-row-container row-electrical">
     <div class="wrap">
       <div class="info-section">
-        <div class="info-block" style="background-image: url('vision.jpg');"></div>
+        <div class="info-block" style="background-image: url('communication.jpg');"></div>
         <div class="info-content">
-          <h4>Computer Vision</h4>
-          Electronic Power is responsible for the generation, distribution, and consumption analysis of power on the rover. Implicit goals include safety, modularity, and simplicity.
+          <h4>Integrated Control</h4>
+          Integrated control is responsible for the distribution, and consumption analysis of power on the rover, as well as designing and implementing circuitry to make functioning sensors.
 
         </div>
       </div>
