--- a/mrover/contact/index.html
+++ b/mrover/contact/index.html
@@ -21,24 +21,24 @@ weight: 2
     <h4>Executive Board</h4>
 
     <h6>President</h6>
-    <p>Scott Briggs</p>
-    <p><a href="mailto:sdbriggs@umich.edu">sdbriggs@umich.edu</a></p>
-
-    <h6>Vice President</h6>
-    <p>Nick Wurtz</p>
-    <p><a href="mailto:nwurtz@umich.edu">nwurtz@umich.edu</a></p>
-
-    <h6>Chief Engineer</h6>
-    <p>Joe Yanos</p>
-    <p><a href="mailto:jgyanos@umich.edu">jgyanos@umich.edu</a></p>
-
-    <h6>Treasurer</h6>
-    <p>Sam Rumack</p>
+    <p>Samuel Rumack</p>
     <p><a href="mailto:rumacsam@umich.edu">rumacsam@umich.edu</a></p>
 
+    <h6>Vice President</h6>
+    <p>Pearce Reikert</p>
+    <p><a href="mailto:pearcere@umich.edu">pearcere@umich.edu</a></p>
+
+    <h6>Chief Engineer</h6>
+    <p>AJ Ferzo</p>
+    <p><a href="mailto:ajferzo@umich.edu">ajferzo@umich.edu</a></p>
+
+    <h6>Treasurer</h6>
+    <p>Bailey Keefer</p>
+    <p><a href="mailto:bailkeef@umich.edu">bailkeef@umich.edu</a></p>
+
     <h6>Information Services Officer</h6>
-    <p>Connor Krupp</p>
-    <p><a href="mailto:kruppcon@umich.edu">kruppcon@umich.edu</a></p>
+    <p>Tyler Dence</p>
+    <p><a href="mailto:dencety@umich.edu">dencety@umich.edu</a></p>
 
   </div>
 </div>
