--- a/mrover/index.html
+++ b/mrover/index.html
@@ -1,5 +1,8 @@
---- 
-layout: default 
+---
+layout: default
+title: Home
+permalink: /
+weight: 0
 ---
 
 <div class="home">
@@ -48,7 +51,7 @@ layout: default
             <div class="row-content text-content">
                 <h4>Where we are</h4>
                 <p>We meet throughout the week at the Wilson Student Team Project Center on North Campus and hold weekly team
-                    meetings at 12:00pm in 107 GFL every Sunday. Feel free to stop by and see what we are up to.</p>
+                    meetings at 2:00pm in 1012 FXB every Sunday. Feel free to stop by and see what we are up to.</p>
             </div>
             <div class="row-content">
                 <div class="block three"></div>
@@ -61,7 +64,7 @@ layout: default
             <div class="cta">
                 <h6>Join?</h6>
                 <p>Interested in joining MRover? It couldn't be any easier. Just show up to our Sunday meetings at
-                    12:00pm in 107 GFL (behind the FXB) on North Campus! Or you can contact us by clicking below.</p>
+                    2:00pm in 1012 FXB) on North Campus! Or you can contact us by clicking below.</p>
                 <a href="contact">
                     <button class="button-hollow">Contact Us</button>
                 </a>
